--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <a href="https://github.com/jsaddict/pages" class="btn">View on GitHub</a>
       <a href="https://github.com/jsaddict/pages/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/jsaddict/pages/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="/hello.html" class="btn">Hello</a>
     </section>
 
     <section class="main-content">
